Fix word overlapping in roster (#64)
* Fix word overlapping in roster

* only 3 characters shown under allegiance

--- a/assets/client/styles/main.css
+++ b/assets/client/styles/main.css
@@ -211,6 +211,7 @@ body {
 #roster #roster-data div.row {
   margin-bottom: 1em;
   font-size: 1.25em;
+  word-wrap: break-word;
 }
 
 #roster #roster-data div.row.me {
